// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oidcConnect creates a role 1`] = `
Object {
  "Resources": Object {
    "oidcconnectProviderGithubOidcProviderDCF72CEA": Object {
      "Properties": Object {
        "ClientIdList": Array [
          "sigstore",
        ],
        "ThumbprintList": Array [
          "a031c46782e6e6c662c2c87c76da9aa62ccabd8e",
        ],
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "AWS::IAM::OIDCProvider",
    },
    "oidcconnectiamroletoassume0E598AA5": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "StringLike": Object {
                  "token.actions.githubusercontent.com:sub": "repo:askulkarni2/cdk-gh-aws-oidc-connect:*",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": Object {
                  "Fn::GetAtt": Array [
                    "oidcconnectProviderGithubOidcProviderDCF72CEA",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`oidcConnect creates a role with a managed policy 1`] = `
Object {
  "Resources": Object {
    "oidcconnectProviderGithubOidcProviderDCF72CEA": Object {
      "Properties": Object {
        "ClientIdList": Array [
          "sigstore",
        ],
        "ThumbprintList": Array [
          "a031c46782e6e6c662c2c87c76da9aa62ccabd8e",
        ],
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "AWS::IAM::OIDCProvider",
    },
    "oidcconnectiamroletoassume0E598AA5": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "StringLike": Object {
                  "token.actions.githubusercontent.com:sub": "repo:askulkarni2/cdk-gh-aws-oidc-connect:*",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": Object {
                  "Fn::GetAtt": Array [
                    "oidcconnectProviderGithubOidcProviderDCF72CEA",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/ReadOnlyAccess",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`oidcConnect creates a role with an inline policy 1`] = `
Object {
  "Resources": Object {
    "oidcconnectProviderGithubOidcProviderDCF72CEA": Object {
      "Properties": Object {
        "ClientIdList": Array [
          "sigstore",
        ],
        "ThumbprintList": Array [
          "a031c46782e6e6c662c2c87c76da9aa62ccabd8e",
        ],
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "AWS::IAM::OIDCProvider",
    },
    "oidcconnectiamroletoassume0E598AA5": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "StringLike": Object {
                  "token.actions.githubusercontent.com:sub": "repo:askulkarni2/cdk-gh-aws-oidc-connect:*",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": Object {
                  "Fn::GetAtt": Array [
                    "oidcconnectProviderGithubOidcProviderDCF72CEA",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`oidcConnect role is granted access to an ECR repo 1`] = `
Object {
  "Resources": Object {
    "oidcconnectProviderGithubOidcProviderDCF72CEA": Object {
      "Properties": Object {
        "ClientIdList": Array [
          "sigstore",
        ],
        "ThumbprintList": Array [
          "a031c46782e6e6c662c2c87c76da9aa62ccabd8e",
        ],
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "AWS::IAM::OIDCProvider",
    },
    "oidcconnectiamroletoassume0E598AA5": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": Object {
                "StringLike": Object {
                  "token.actions.githubusercontent.com:sub": "repo:askulkarni2/cdk-gh-aws-oidc-connect:*",
                },
              },
              "Effect": "Allow",
              "Principal": Object {
                "Federated": Object {
                  "Fn::GetAtt": Array [
                    "oidcconnectProviderGithubOidcProviderDCF72CEA",
                    "Arn",
                  ],
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "oidcconnectiamroletoassumeDefaultPolicyEB2B0A66": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "ecr:BatchCheckLayerAvailability",
                "ecr:GetDownloadUrlForLayer",
                "ecr:BatchGetImage",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testrepo76ABFB50",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": "ecr:GetAuthorizationToken",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "ecr:PutImage",
                "ecr:InitiateLayerUpload",
                "ecr:UploadLayerPart",
                "ecr:CompleteLayerUpload",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testrepo76ABFB50",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "oidcconnectiamroletoassumeDefaultPolicyEB2B0A66",
        "Roles": Array [
          Object {
            "Ref": "oidcconnectiamroletoassume0E598AA5",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testrepo76ABFB50": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
